<resources>
    <string name="app_name">Менеджер паролей</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="write_in_help">Написать в поддержку</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="enter_your_request">Искать мою категорию</string>
    <string name="create">Создать</string>
    <string name="create_section">Создать категорию</string>
    <string name="name_section">Название категории</string>
    <string name="delete_chapter">Удалить категорию</string>
    <string name="cancel">Отменить</string>
    <string name="my_fab">my_fab</string>
    <string name="put_email">Введите электронную почту</string>
    <string name="your_password">Ваш пароль</string>
    <string name="your_login">Ваш логин</string>
    <string name="put_login">Введите логин</string>
    <string name="your_email">Ваша электронная почта</string>
    <string name="enter_password">Введите пароль</string>
    <string name="put_category">Введите название категории</string>
    <string name="txt_email">Электнонная почта</string>
    <string name="save">Сохранить</string>
    <string name="category">Категория</string>
    <string name="password">Ваш пароль</string>
    <string name="enter_new_password">Введите новый пароль</string>
    <string name="confirm_your_entry">Подтвердите ввод</string>
    <string name="enter_old_password">Введите старый пароль</string>
    <string name="your_keyword">Ваше ключевое слово</string>
    <string name="update_password">Обновить пароль</string>
    <string name="enater_password">Введите пароль для доступа к приложению</string>
    <string name="entry_application">Вход в приложение</string>
    <string name="login">Войти</string>
    <string name="greate_password">Создайте пароль для защиты ваших данных</string>
    <string name="enter_keyword">Введите ключевое слово</string>
    <string name="create_password">Создать пароль</string>
    <string name="error_email">Введите адрес почты вида Ivan@mail.ru</string>
    <string name="emailPattern">[a-zA-Z0-9._-]+@[a-z]+\.+[a-z]+</string>
    <string name="error_email2">Введен некорректный email</string>
    <string name="error_password_too_short">Пароль должен содержать не менее 5 символов</string>
    <string name="password_not_confirm">Пароли на совпадают</string>
    <string name="newpassword_confirm_dont_match">Новый пароль и подтверждение не совпадают</string>
    <string name="enter_new_keyword">Введите новое ключевое слово</string>
    <string name="enter_new_data">Укажите, пожалуйста, текущий данные для смены</string>
</resources>