<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_background"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/placeholder_big"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/dp48">

    </ImageView>

    <TextView
        android:id="@+id/txt_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greate_password"
        android:textAlignment="center"
        android:textColor="@color/fab_color"
        android:textSize="@dimen/_24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/edt_password"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/edt_password"
        style="@style/EditSearchTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp16"
        android:layout_marginTop="@dimen/dp16"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:minHeight="@dimen/dp56"
        android:textCursorDrawable="@drawable/custom_cursor"
        app:layout_constraintTop_toBottomOf="@+id/txt_description"
        app:layout_constraintBottom_toTopOf="@+id/edt_confirm_password" />

    <EditText
        android:id="@+id/edt_confirm_password"
        style="@style/EditSearchTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp16"
        android:layout_marginTop="@dimen/dp24"
        android:hint="@string/confirm_your_entry"
        android:inputType="textPassword"
        android:minHeight="@dimen/dp56"
        android:textCursorDrawable="@drawable/custom_cursor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_password" />

    <EditText
        android:id="@+id/edt_confirm_keyword"
        style="@style/EditSearchTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp16"
        android:layout_marginTop="@dimen/dp24"
        android:hint="@string/enter_keyword"
        android:minHeight="@dimen/dp56"
        android:textCursorDrawable="@drawable/custom_cursor"
        app:layout_constraintTop_toBottomOf="@+id/edt_confirm_password" />

    <Button
        android:id="@+id/btn_create_password"
        style="@style/ApplyButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp16"
        android:layout_marginBottom="@dimen/dp8"
        android:paddingVertical="@dimen/dp20"
        android:text="@string/create_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_goneMarginBottom="@dimen/dp24" />

</androidx.constraintlayout.widget.ConstraintLayout>