<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_background"
    android:fitsSystemWindows="true"
    tools:context=".newGroup.presentation.ui.NewGroupFragment">

    <!-- Back Arrow -->
    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/borderHeaderGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_arrow_model"
        app:tint="@color/fab_color" />

    <!-- Copy Symbol -->
    <ImageView
        android:id="@+id/copy_sympol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp36"
        android:layout_marginTop="@dimen/dp16"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/borderHeaderGuideline"
        app:srcCompat="@drawable/copy_symbol"
        app:tint="@color/fab_color" />

    <!-- Top Guideline -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/borderHeaderGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/dp36" />

    <!-- Cover Image -->
    <ImageView
        android:id="@+id/cover"
        android:layout_width="270dp"
        android:layout_height="270dp"
        android:layout_marginHorizontal="@dimen/dp24"
        android:layout_marginTop="26dp"
        android:background="@drawable/dashed_border"
        android:contentDescription="@null"
        android:scaleType="centerInside"
        android:src="@drawable/placeholder_big"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/borderHeaderGuideline"
        app:shapeAppearanceOverlay="@style/RoundedImageViewStyle" />

    <!-- Name Container with CheckBox -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/name_container_wrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="@dimen/dp16"
        app:layout_constraintTop_toBottomOf="@id/cover"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <CheckBox
            android:id="@+id/check_box_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/fab_color"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="@dimen/dp8" />

        <LinearLayout
            android:id="@+id/name_category_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bg_textview"
            android:padding="@dimen/dp8"
            app:layout_constraintStart_toEndOf="@id/check_box_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/name_category_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ys_display_medium"
                android:paddingStart="@dimen/dp8"
                android:text="@string/category"
                android:textColor="@color/fab_color"
                android:textSize="@dimen/_14sp" />

            <TextView
                android:id="@+id/name_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dp4"
                android:paddingStart="@dimen/dp16"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="@dimen/sp16"
                android:fontFamily="@font/ys_display_regular"
                app:fontWeight="400"
                tools:text="@string/category" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Email Container with CheckBox -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/email_container_wrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp16"
        android:layout_marginHorizontal="@dimen/dp16"
        app:layout_constraintTop_toBottomOf="@id/name_container_wrapper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <CheckBox
            android:id="@+id/check_box_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/fab_color"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="@dimen/dp8" />

        <LinearLayout
            android:id="@+id/email_category_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bg_textview"
            android:padding="@dimen/dp8"
            app:layout_constraintStart_toEndOf="@id/check_box_email"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/email_category_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ys_display_medium"
                android:paddingStart="@dimen/dp8"
                android:text="@string/your_email"
                android:textColor="@color/fab_color"
                android:textSize="@dimen/_14sp" />

            <TextView
                android:id="@+id/email_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dp4"
                android:paddingStart="@dimen/dp16"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="@color/black"
                android:textSize="@dimen/sp16"
                android:fontFamily="@font/ys_display_regular"
                app:fontWeight="400"
                tools:text="@string/your_email" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Login Container with CheckBox -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_container_wrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp16"
        android:layout_marginHorizontal="@dimen/dp16"
        app:layout_constraintTop_toBottomOf="@id/email_container_wrapper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <CheckBox
            android:id="@+id/check_box_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/fab_color"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="@dimen/dp8" />

        <LinearLayout
            android:id="@+id/login_category_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bg_textview"
            android:padding="@dimen/dp8"
            app:layout_constraintStart_toEndOf="@id/check_box_login"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/login_category_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ys_display_medium"
                android:paddingStart="@dimen/dp8"
                android:text="@string/your_login"
                android:textColor="@color/fab_color"
                android:textSize="@dimen/_14sp" />

            <TextView
                android:id="@+id/login_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dp4"
                android:paddingStart="@dimen/dp16"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="@dimen/sp16"
                android:fontFamily="@font/ys_display_regular"
                app:fontWeight="400"
                tools:text="@string/your_login" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Password Container with CheckBox -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/password_container_wrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp16"
        android:layout_marginHorizontal="@dimen/dp16"
        app:layout_constraintTop_toBottomOf="@id/login_container_wrapper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <CheckBox
            android:id="@+id/check_box_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/fab_color"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="@dimen/dp8" />

        <LinearLayout
            android:id="@+id/password_category_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bg_textview"
            android:padding="@dimen/dp8"
            app:layout_constraintStart_toEndOf="@id/check_box_password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/password_category_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ys_display_medium"
                android:paddingStart="@dimen/dp8"
                android:text="@string/password"
                android:textColor="@color/fab_color"
                android:textSize="@dimen/_14sp" />

            <TextView
                android:id="@+id/password_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dp4"
                android:paddingStart="@dimen/dp16"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="@dimen/sp16"
                android:fontFamily="@font/ys_display_regular"
                app:fontWeight="400"
                tools:text="@string/password" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Floating Action Button -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp16"
        android:layout_marginBottom="@dimen/_40dp"
        android:contentDescription="@string/my_fab"
        android:src="@drawable/ic_create"
        app:backgroundTint="@color/fab_color"
        app:fabCustomSize="@dimen/_64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@android:color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>
